objects/project_cloud__Project__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_bmc__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_bmc__Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ocp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity the Project is related to</description>
        <inlineHelpText>Opportunity the Project is related to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Dates_Changed_Modstamp__c</fullName>
        <description>This is a system field used to identify Projects whose dates have changed. It should not be visible or updated under any circumstances</description>
        <label>System Dates Changed Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The investment that the project is related to</inlineHelpText>
        <label>Investment</label>
        <referenceTo>ccpe_ppm__Investment__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>ccpe_ppm__Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Budget_Usage__c</fullName>
        <formula>ccpe_r__Total_Actual_Costs__c /  ccpe_r__Total_Budgeted_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Usage to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Budgeted_Labor_Cost__c</fullName>
        <label>Budgeted Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Cost__c</fullName>
        <label>Calculated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>ccpe_r__Rate_Card__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Rate__c</fullName>
        <label>Calculated Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Retainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retainer</label>
        <referenceTo>ccpe_r__Retainer__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Total_Actual_Costs__c</fullName>
        <formula>project_cloud__Expenses_Actual__c + ccpe_r__Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Total_Budgeted_Costs__c</fullName>
        <formula>project_cloud__Expenses_Budgeted__c  +  ccpe_r__Budgeted_Labor_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budgeted Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Utilization_Category__c</fullName>
        <label>Utilization Category</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a system field indicating which project template (or project) this project was cloned from</description>
        <label>Cloned From</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Cloned Projects</relationshipLabel>
        <relationshipName>Cloned_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completion (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Customer_Collaboration_Group_Id__c</fullName>
        <description>Relationships to the CollaborationGroup objects are not permitted, so a text field containing the Salesforce Id is used instead.</description>
        <inlineHelpText>The value of this field should be the Salesforce Id of the chatter group you wish to link to this Project.</inlineHelpText>
        <label>Customer Collaboration Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration_IsWorking__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Duration In Working Days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Duration__c</fullName>
        <label>Duration (days)</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Duration__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <description>Rollup summary of the Project Task End dates. The Sprint End Dates on the Project Phases are not used when determining this date</description>
        <inlineHelpText>The end date of the project derived from the latest ending project phase. The Sprint End Dates on the Project Phase&apos;s are not used when determining this date</inlineHelpText>
        <label>Project End Date</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__End__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Estimated_Hours__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Expenses_Actual__c</fullName>
        <label>Total Actual Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Expenses_Budgeted__c</fullName>
        <label>Total Budgeted Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health_Image__c</fullName>
        <formula>IMAGE( 
	CASE(project_cloud__Health__c, 
		&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
		&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
		&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
		&quot;/s.gif&quot;), 
&quot;Health Status&quot;)</formula>
        <label>Health (Traffic Light)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health_Reason__c</fullName>
        <description>When the Health of a Project Task is changed a reason is required.</description>
        <label>Health Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Health__c</fullName>
        <description>Determines the health of the Project Task, and defines the Traffic Light formula</description>
        <label>Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#009900</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Block__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>The unit of time the Project Task&apos;s length must fit into. For example if the unit is 4 a task must be 4, 8 12 hours etc. The same rule applies to Time Entry objects. This is a system field and should never be modified.
(Cloud Coach 21-JUL-11)</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Hours Block</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_In_Day__c</fullName>
        <defaultValue>8</defaultValue>
        <description>This is the value used for the calculation of a project task end date. Currently defaults to 8 which is the standard number of hours in a working day. This is a system field and should never be modified.
(Cloud Coach 21-JUL-11)</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Hours In Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsManual_Completed_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Populate Completed Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsOnly_Subscriptions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the resourcing scheme for the Project only using Subscriptions. This will control the Project Task Resourcing page features.</description>
        <label>Only Subscriptions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this project can be used as a Project Template</description>
        <inlineHelpText>Check this box if this project can be used as a Project Template</inlineHelpText>
        <label>Project Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Friday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Friday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Monday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Monday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if Saturday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value indicating if Sunday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Thursday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Thursday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Tuesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Tuesday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsWorking_Wednesday__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean value indicating if Wednesday is a day this task will be worked on. This is a system field and should never be modified.</description>
        <inlineHelpText>This is a system field and should never be modified.</inlineHelpText>
        <label>Working Day Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Work_Type__c.project_cloud__Type__c</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Phase_Status_Maximum__c</fullName>
        <description>System calculated field used to derive the overall project status. This is a system field and does not be visible. The status field is what should be used</description>
        <inlineHelpText>This is a system field and does not be visible. The status field is what should be used</inlineHelpText>
        <label>Phase Status Maximum</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Task_Status_Maximum__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Phase_Status_Minimum__c</fullName>
        <description>System calculated field used to derive the overall project status. This is a system field and does not be visible. The status field is what should be used.</description>
        <inlineHelpText>This is a system field and does not be visible. The status field is what should be used.</inlineHelpText>
        <label>Phase Status Minimum</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Task_Status_Minimum__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charter</label>
        <referenceTo>project_cloud__Charter__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Duration__c</fullName>
        <description>The number of days between the start and end date of the Project. When the project doesn&apos;t have a start end end date the value is 0, when just an End date is missing use today as the end date</description>
        <formula>IF(ISBLANK(project_cloud__End__c),
	IF(ISBLANK(project_cloud__Start__c),
		/*When there is no start or end the length of the project is 0*/
		0
	,/*ELSE*/
		/*When there is a start date but no end date (not theoretically possible) use todays date as the end*/
		TODAY() -  project_cloud__Start__c
	)
,/*ELSE*/
	project_cloud__End__c -  project_cloud__Start__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The duration of the project in days, calculated from the start and end dates of the project</inlineHelpText>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sorting_Hash__c</fullName>
        <description>This field is used for sorting Project in the CCProjex Enterprise default order of Start, End, Name</description>
        <formula>BLANKVALUE(TEXT(project_cloud__Start__c), &apos;9999-99-99&apos;) &amp; BLANKVALUE(TEXT(project_cloud__End__c), &apos;9999-99-99&apos;) &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field can be used to sort Projects using the CCProjex Enterprise default order</inlineHelpText>
        <label>Sorting Column</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <description>Rollup summary of the Project Task Start dates. The Sprint Start Dates on the Project Phases are not used when determining this date</description>
        <inlineHelpText>The start date of the project derived from the earliest starting Project Task. The Sprint Start Dates on the Project Phase&apos;s are not used when determining this date</inlineHelpText>
        <label>Project Start Date</label>
        <summarizedField>project_cloud__Project_Phase__c.project_cloud__Start__c</summarizedField>
        <summaryForeignKey>project_cloud__Project_Phase__c.project_cloud__Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <description>Formula that uses the rolled up status enum values to calculate the status of a project based on the status of all the project tasks</description>
        <formula>IF(project_cloud__Phase_Status_Minimum__c = project_cloud__Phase_Status_Maximum__c &amp;&amp; project_cloud__Phase_Status_Minimum__c = 0,
	$Label.project_cloud__Project_Status_Completed
	,
	IF(project_cloud__Phase_Status_Minimum__c = project_cloud__Phase_Status_Maximum__c &amp;&amp; project_cloud__Phase_Status_Minimum__c &gt; 1,
		$Label.project_cloud__Project_Status_Not_Started
		,
		$Label.project_cloud__Project_Status_In_Progress
	)
)</formula>
        <inlineHelpText>The overall status of the project currently</inlineHelpText>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this indicates the Project has been fully subscribed. i.e there are no more subscriptions that need to be created</description>
        <inlineHelpText>When checked, this indicates the Project which this task belongs to has been marked fully subscribed. (This is only applicable when allocating at the project level)</inlineHelpText>
        <label>Fully Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated by the Create Project button on the Ticket</description>
        <label>Ticket (Project was created from)</label>
        <referenceTo>project_cloud__Ticket__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Human Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Environment, Health &amp; Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Governance, Risk &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Customer Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Finance &amp; Controlling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Supplier Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Supply Chain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Product Lifecycle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Enterprise Enabling Elements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT User Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Shared Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Unified Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Enterprise Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Enterprise Basis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT PLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGIT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Units__c</fullName>
        <description>Defining the calculation method for calculating an end date for a Project Task</description>
        <inlineHelpText>The units by which a project task duration is calculated. Estimated Hours project tasks run for the time input regardless of allocations, while Calendar Allocation project tasks can be shortened or lengthened by adding or removing resources from the task.</inlineHelpText>
        <label>Project Units</label>
        <picklist>
            <picklistValues>
                <fullName>Estimated Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Duration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <description>Sum of the hours completed on the Project, it&apos;s Phases, Tasks and Tickets using the time entry Work objects. This is calculated by the trigger WorkConfiguration</description>
        <inlineHelpText>This is a system object and should not be visible</inlineHelpText>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingReasons>
        <fullName>project_cloud__Allocation__c</fullName>
        <label>Allocation</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>project_cloud__Subscription__c</fullName>
        <label>Active Subscription</label>
    </sharingReasons>
    <validationRules>
        <fullName>project_cloud__Health_Change_Requires_Reason</fullName>
        <active>true</active>
        <description>If the Health of a Project Task is changed, the reason field must be changed to explain why.</description>
        <errorConditionFormula>ISCHANGED(project_cloud__Health__c)
 &amp;&amp; (
	NOT(ISCHANGED(project_cloud__Health_Reason__c)) ||
	ISBLANK(project_cloud__Health_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Health_Reason__c</errorDisplayField>
        <errorMessage>When the Health is changed a reason must be given</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Units_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>Once the Project Units have been defined they are not able to be changed. This is to prevent massive recalculations on all tasks when the value is changed</description>
        <errorConditionFormula>(
	ISPICKVAL(project_cloud__Units__c, &apos;&apos;) ||
	ISCHANGED(project_cloud__Units__c)
) &amp;&amp; (
	/*Special Cases for when the migration helper updates the values*/ 
	NOT(ISPICKVAL(PRIORVALUE(project_cloud__Units__c), &quot;Fixed Duration&quot;)) ||
	NOT(ISPICKVAL(PRIORVALUE(project_cloud__Units__c), &quot;Fixed Work&quot;))
)</errorConditionFormula>
        <errorDisplayField>project_cloud__Units__c</errorDisplayField>
        <errorMessage>This value cannot be changed. Once set it is read only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Working_Days_Read_Only</fullName>
        <active>true</active>
        <description>The working days checkboxes are read only, once they are set when the project is created they cannot be modified.</description>
        <errorConditionFormula>ISCHANGED(project_cloud__IsWorking_Monday__c) || 
ISCHANGED(project_cloud__IsWorking_Tuesday__c) || 
ISCHANGED(project_cloud__IsWorking_Wednesday__c) || 
ISCHANGED(project_cloud__IsWorking_Thursday__c) || 
ISCHANGED(project_cloud__IsWorking_Friday__c) || 
ISCHANGED(project_cloud__IsWorking_Saturday__c) || 
ISCHANGED(project_cloud__IsWorking_Sunday__c)</errorConditionFormula>
        <errorMessage>The Working Days cannot be changed. Once set they are read only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Working_Days_Required</fullName>
        <active>true</active>
        <description>At least one working day needs to be selected or by definition the project will never be completed</description>
        <errorConditionFormula>NOT(project_cloud__IsWorking_Monday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Tuesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Wednesday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Thursday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Friday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Saturday__c) &amp;&amp;
NOT(project_cloud__IsWorking_Sunday__c)</errorConditionFormula>
        <errorMessage>Please select at least one Working Day</errorMessage>
    </validationRules>
</CustomObject>